--- a/src/Component/Home/SingleOfferDetails/SingleOfferDetails.css
+++ b/src/Component/Home/SingleOfferDetails/SingleOfferDetails.css
@@ -1,11 +1,11 @@
-.detailsImg{
+.Img_section{
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://i.ibb.co/Yp6jMfV/breadcrumb-bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
     padding: 80px;
 }
-.detailsImg h1{
+.Img_section h1{
     color: tomato;
 }
 .details{
