--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  font-family: 'Krub', sans-serif;
+
+}
+.App h1, h2, h3, h4, h5, h6 {
+  font-family: 'Righteous', cursive;
 }
 
 .App-logo {
