--- a/src/Component/Home/Banner/Banner.css
+++ b/src/Component/Home/Banner/Banner.css
@@ -7,19 +7,27 @@
     width: 75%;
     margin: auto;
     margin-bottom: 10px;
+    margin-left: -15rem !important;
+    font-size: 4rem;
 }
 .carousel_about h4{
     margin-bottom: 10rem;
+    margin-left: -45rem !important;
+    color: tomato;
 }
 
 @media (max-width:667px){
     .carousel_about h1{
         width: 100%;
         margin: auto;
+        margin-left: 0 !important;
+        font-size: 1rem;
     }
     .carousel_about h4{
         width: 100%;
         margin: 0;
+        margin-left: 0 !important;
+        font-size: 1rem;
     }
     .carouselImg{
         height: 100%;
